--- a/cs598-fa18/style.css
+++ b/cs598-fa18/style.css
@@ -101,7 +101,7 @@ h1 {
     margin: 0px;
     margin-bottom: 0.4in;
     font-size: 0.25in;
-    color: #fa6300;
+    color: #E84A27;
     notext-align: center;
     font-weight: 900;
 }
@@ -109,7 +109,7 @@ h2 {
     font-size: .22in;
     border-bottom: 1px solid #999;
     padding-bottom: .08in;
-    color: #131f33;
+    color: #13294b;
     margin-top: .4in;
     margin-top: 25px;
 }
